--- a/back-end/package.json
+++ b/back-end/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^2.0.1",
     "body-parser": "^1.18.3",
     "cookie-session": "^2.0.0-beta.3",
+    "cors": "^2.8.4",
     "express": "^4.16.1",
     "express-fileupload": "^0.4.0",
     "helmet": "^3.12.1",
@@ -19,6 +20,7 @@
     "mkdirp": "^0.5.1",
     "mysql": "^2.15.0",
     "nodemailer": "^4.6.5",
-    "request": "^2.87.0"
+    "request": "^2.87.0",
+    "xmlhttprequest": "^1.8.0"
   }
 }
