--- a/back-end/package.json
+++ b/back-end/package.json
@@ -20,7 +20,6 @@
     "mkdirp": "^0.5.1",
     "mysql": "^2.15.0",
     "nodemailer": "^4.6.5",
-    "request": "^2.87.0",
-    "xmlhttprequest": "^1.8.0"
+    "request": "^2.87.0"
   }
 }
